# IRD-Optimization

./: .gitignore  P0_FIXES_SUMMARY.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
src/emd_praxis/: __init__.py  cli.py  validation.py
src/emd_praxis/data/: __init__.py  synthetic_generator.py
src/emd_praxis/evaluation/: metrics.py
src/emd_praxis/ml/: model.py
src/emd_praxis/optimize/: portfolio.py
src/emd_praxis/visualization/: __init__.py  plots.py
tests/: test_generator.py  test_metrics.py  test_model.py  test_optimize.py  test_validation.py  test_visualization.py
